# Compiladores-Proyecto

./: .gitignore  Cargo.toml  MANUAL_USUARIO.md  README.md
.github/workflows/: rust.yml
Compilador/: Cargo.toml  factorial_iterativo.eo  factorial_recursivo.eo  killer_queen.eo  manual_usuario.md
Compilador/lib/: compilador.rs  killer_queen.rs
Compilador/lib/parser/: asignacion.rs  bloque.rs  comentario.rs  decision.rs  dimensiones.rs  dimensiones_decl.rs  estatuto.rs  func_esp.rs  func_params.rs  llama_func.rs  mod.rs  programa.rs  regresa.rs  repeticion.rs
Compilador/lib/parser/declaraciones/: clase.rs  declaraciones.rs  funcion.rs  mod.rs  variables.rs
Compilador/lib/parser/reglas_expresion/: exp.rs  exp_logica.rs  expresion.rs  factor.rs  mod.rs  termino.rs  valor.rs
Compilador/lib/scanners/: constantes.rs  id.rs  mod.rs  operadores.rs  texto.rs  tipos.rs  ws.rs
Compilador/lib/semantica/: cuadruplos.rs  cubo_semantico.rs  globales.rs  mod.rs  tabla_clases.rs  tabla_funciones.rs  tabla_variables.rs
Compilador/src/: main.rs
Maquina_Virtual/: Prueba1.txt  Referencia.txt  Template.txt  globales.py  lectura.py  main.py  tempCodeRunnerFile.py
Pruebas/: archivos.eo  arreglos.eo  arreglos2.eo  arreglos3.eo  ciclos.eo  codigo_ejemplo.eo  escribe.eo  factorial.eo  fibonacci.eo  funciones.eo  matrices.eo  operaciones.eo  prueba_general.eo
lib/: compilador.rs
lib/lexer/: mod.rs  operadores.rs  tipos.rs
lib/parser/: asignacion.rs  bloque.rs  clase.rs  comentario.rs  decision.rs  declaraciones.rs  dimensiones.rs  dimensiones_decl.rs  estatuto.rs  exp.rs  expresion.rs  factor.rs  func_esp.rs  func_params.rs  funcion.rs  llama_func.rs  mod.rs  programa.rs  regresa.rs  repeticion.rs  termino.rs  valor.rs  varcte.rs  variables.rs  vars.rs
lib/parser/declaraciones/: clase.rs  declaraciones.rs  funcion.rs  variables.rs
lib/parser/reglas_expresion/: exp.rs  exp_logica.rs  expresion.rs  factor.rs  mod.rs  termino.rs  valor.rs
lib/scanners/: constantes.rs  id.rs  mod.rs  texto.rs  tipos.rs  ws.rs
lib/semantica/: cuadruplos.rs  cubo_semantico.rs  globales.rs  mod.rs  tabla_clases.rs  tabla_funciones.rs  tabla_variables.rs
src/: main.rs
