[package]
name = "Compilador"
version = "0.1.0"
authors = ["Ale <alegayndra@gmail.com>", "JC <jose.carlos4013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "compilador"
path = "lib/compilador.rs"

[[bin]]
name = "compilador_exe"
path = "src/main.rs"

[dependencies]
nom = "6.1.2"
lazy_static = "1.4.0"